api/java_rmi/Naming/Rebind.html crashes with SEGV from UTF8::quoted_ascii_length call

XMLWordPrintable

    • b07
    • 12
    • b15
    • x86_64
    • linux_oracle_8

      tier 10 JCK test failure

      --------------- S U M M A R Y ------------

      Command Line: --enable-preview -Djava.awt.headless=true -Xlog:all=trace:file=vm-%p.log::filecount=1,filesize=1M -XX:+EnableDynamicAgentLoading -Djdk.attach.allowAttachSelf=true -Djava.security.properties=/opt/mach5/mesos/work_dir/jib-master/install/jck/24/b01/extra/bundles/JCK-extra-24.zip/JCK-extra-24/extra.security.properties -XX:MaxRAMPercentage=4.16667 -Djava.security.policy=/opt/mach5/mesos/work_dir/jib-master/install/jck/24/b01/bundles/JCK-runtime-24.jar/JCK-runtime-24/lib/jck.policy -Djava.security.manager=allow javasoft.sqe.tests.api.java.rmi.Naming.RebindTests -timeoutFactor 1.0 -network.tcpPortRange 0

      Host: ol8-x64-223739, AMD EPYC 7J13 64-Core Processor, 12 cores, 23G, Oracle Linux Server release 8.9
      Time: Tue Aug 27 04:24:41 2024 UTC elapsed time: 4.360200 seconds (0d 0h 0m 4s)

      --------------- T H R E A D ---------------

      Current thread (0x00007f5544031fa0): JavaThread "main" [_thread_in_vm, id=2343614, stack(0x00007f554b6b2000,0x00007f554b7b3000) (1028K)]

      Stack: [0x00007f554b6b2000,0x00007f554b7b3000], sp=0x00007f554b7afc88, free space=1015k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x18483c5] UTF8::quoted_ascii_length(char const*, int)+0x15
      V [libjvm.so+0x1773192] log_trace_symboltable_helper(Symbol*, char const*)+0x62
      V [libjvm.so+0x1776554] SymbolTable::do_add_if_needed(char const*, int, unsigned long, bool)+0xd44
      V [libjvm.so+0x1777388] SymbolTable::new_symbols(ClassLoaderData*, constantPoolHandle const&, int, char const**, int*, int*, unsigned int*)+0x78
      V [libjvm.so+0x96328c] ClassFileParser::parse_constant_pool_entries(ClassFileStream const*, ConstantPool*, int, JavaThread*)+0xcdc
      V [libjvm.so+0x963951] ClassFileParser::parse_constant_pool(ClassFileStream const*, ConstantPool*, int, JavaThread*)+0x41
      V [libjvm.so+0x964fd0] ClassFileParser::parse_stream(ClassFileStream const*, JavaThread*)+0x250
      V [libjvm.so+0x965d13] ClassFileParser::ClassFileParser(ClassFileStream*, Symbol*, ClassLoaderData*, ClassLoadInfo const*, ClassFileParser::Publicity, JavaThread*)+0x223
      V [libjvm.so+0x11f0146] KlassFactory::create_from_stream(ClassFileStream*, Symbol*, ClassLoaderData*, ClassLoadInfo const&, JavaThread*)+0xd6
      V [libjvm.so+0x978a56] ClassLoader::load_class(Symbol*, PackageEntry*, bool, JavaThread*)+0x176
      V [libjvm.so+0x1791988] SystemDictionary::load_instance_class_impl(Symbol*, Handle, JavaThread*)+0x478
      V [libjvm.so+0x178f8dc] SystemDictionary::load_instance_class(Symbol*, Handle, JavaThread*)+0x1c
      V [libjvm.so+0x17902f4] SystemDictionary::resolve_instance_class_or_null(Symbol*, Handle, Handle, JavaThread*)+0x8b4
      V [libjvm.so+0x1790a22] SystemDictionary::resolve_or_fail(Symbol*, Handle, Handle, bool, JavaThread*)+0x22
      V [libjvm.so+0xa3de8f] ConstantPool::klass_at_impl(constantPoolHandle const&, int, JavaThread*)+0x18f
      V [libjvm.so+0xe67a56] InterpreterRuntime::_new(JavaThread*, ConstantPool*, int)+0x86
      j sun.rmi.transport.tcp.TCPChannel.createConnection()Lsun/rmi/transport/Connection;+19 java.rmi@24-ea
      j sun.rmi.transport.tcp.TCPChannel.newConnection()Lsun/rmi/transport/Connection;+101 java.rmi@24-ea
      j sun.rmi.server.UnicastRef.newCall(Ljava/rmi/server/RemoteObject;[Ljava/rmi/server/Operation;IJ)Ljava/rmi/server/RemoteCall;+19 java.rmi@24-ea
      j sun.rmi.registry.RegistryImpl_Stub.rebind(Ljava/lang/String;Ljava/rmi/Remote;)V+12 java.rmi@24-ea
      j java.rmi.Naming.rebind(Ljava/lang/String;Ljava/rmi/Remote;)V+30 java.rmi@24-ea
      j javasoft.sqe.tests.api.java.rmi.Naming.RebindTests$1.run()Ljavasoft/sqe/javatest/Status;+25
      j javasoft.sqe.jck.lib.SecurityTestRunner.runTestWithTCKSM(Ljavasoft/sqe/jck/lib/SecurityTestRunner$RT;Ljavasoft/sqe/jck/lib/TCKSecurityPolicy;ZZ)Ljavasoft/sqe/javatest/Status;+17
      j javasoft.sqe.jck.lib.SecurityTestRunner.runTestWithPermissions(Ljavasoft/sqe/jck/lib/SecurityTestRunner$RT;Ljava/security/Permissions;Ljava/io/PrintWriter;Z)Ljavasoft/sqe/javatest/Status;+47
      j javasoft.sqe.jck.lib.SecurityTestRunner.runTestWithAllPermissions(Ljavasoft/sqe/jck/lib/SecurityTestRunner$RT;Ljava/security/Permissions;Ljava/io/PrintWriter;ZZ)Ljavasoft/sqe/javatest/Status;+4
      j javasoft.sqe.jck.lib.AllPermissionSM.testRun(Ljavasoft/sqe/jck/lib/SecurityTestRunner$RT;Ljava/security/Permissions;Ljava/io/PrintWriter;ZZ)Ljavasoft/sqe/javatest/Status;+6
      j javasoft.sqe.jck.lib.AllPermissionSM.testRun(Ljavasoft/sqe/jck/lib/SecurityTestRunner$RT;Ljava/security/Permissions;Ljava/io/PrintWriter;Z)Ljavasoft/sqe/javatest/Status;+5
      j javasoft.sqe.tests.api.java.rmi.Naming.RebindTests.Rebind0001()Ljavasoft/sqe/javatest/Status;+19
      j java.lang.invoke.DirectMethodHandle$Holder.invokeVirtual(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+10 java.base@24-ea
      j java.lang.invoke.LambdaForm$MH+0x00007f54cb005400.invoke(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+31 java.base@24-ea
      j java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+19 java.base@24-ea
      j jdk.internal.reflect.DirectMethodHandleAccessor.invokeImpl(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+41 java.base@24-ea
      j jdk.internal.reflect.DirectMethodHandleAccessor.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+23 java.base@24-ea
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+102 java.base@24-ea
      j javasoft.sqe.javatest.lib.MultiTest.invokeTestCase(Ljava/lang/reflect/Method;)Ljavasoft/sqe/javatest/Status;+8
      j javasoft.sqe.javatest.lib.MultiTest.run([Ljava/lang/String;Ljava/io/PrintWriter;Ljava/io/PrintWriter;)Ljavasoft/sqe/javatest/Status;+139
      j javasoft.sqe.jck.lib.RegistryTest.run([Ljava/lang/String;Ljava/io/PrintWriter;Ljava/io/PrintWriter;)Ljavasoft/sqe/javatest/Status;+10
      j javasoft.sqe.javatest.lib.MultiTest.run([Ljava/lang/String;Ljava/io/PrintStream;Ljava/io/PrintStream;)Ljavasoft/sqe/javatest/Status;+46
      j javasoft.sqe.tests.api.java.rmi.Naming.RebindTests.main([Ljava/lang/String;)V+16
      v ~StubRoutines::call_stub 0x00007f5533d6cd01
      V [libjvm.so+0xe800cc] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x48c
      V [libjvm.so+0xfb86c0] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, JavaThread*) [clone .constprop.1]+0x360
      V [libjvm.so+0xfbbdc3] jni_CallStaticVoidMethod+0x193
      C [libjli.so+0x39ca] invokeStaticMainWithArgs+0x4a
      C [libjli.so+0x5151] JavaMain+0xeb1
      C [libjli.so+0x7cc9] ThreadJavaMain+0x9
      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      j sun.rmi.transport.tcp.TCPChannel.createConnection()Lsun/rmi/transport/Connection;+19 java.rmi@24-ea
      j sun.rmi.transport.tcp.TCPChannel.newConnection()Lsun/rmi/transport/Connection;+101 java.rmi@24-ea
      j sun.rmi.server.UnicastRef.newCall(Ljava/rmi/server/RemoteObject;[Ljava/rmi/server/Operation;IJ)Ljava/rmi/server/RemoteCall;+19 java.rmi@24-ea
      j sun.rmi.registry.RegistryImpl_Stub.rebind(Ljava/lang/String;Ljava/rmi/Remote;)V+12 java.rmi@24-ea
      j java.rmi.Naming.rebind(Ljava/lang/String;Ljava/rmi/Remote;)V+30 java.rmi@24-ea
      j javasoft.sqe.tests.api.java.rmi.Naming.RebindTests$1.run()Ljavasoft/sqe/javatest/Status;+25
      j javasoft.sqe.jck.lib.SecurityTestRunner.runTestWithTCKSM(Ljavasoft/sqe/jck/lib/SecurityTestRunner$RT;Ljavasoft/sqe/jck/lib/TCKSecurityPolicy;ZZ)Ljavasoft/sqe/javatest/Status;+17
      j javasoft.sqe.jck.lib.SecurityTestRunner.runTestWithPermissions(Ljavasoft/sqe/jck/lib/SecurityTestRunner$RT;Ljava/security/Permissions;Ljava/io/PrintWriter;Z)Ljavasoft/sqe/javatest/Status;+47
      j javasoft.sqe.jck.lib.SecurityTestRunner.runTestWithAllPermissions(Ljavasoft/sqe/jck/lib/SecurityTestRunner$RT;Ljava/security/Permissions;Ljava/io/PrintWriter;ZZ)Ljavasoft/sqe/javatest/Status;+4
      j javasoft.sqe.jck.lib.AllPermissionSM.testRun(Ljavasoft/sqe/jck/lib/SecurityTestRunner$RT;Ljava/security/Permissions;Ljava/io/PrintWriter;ZZ)Ljavasoft/sqe/javatest/Status;+6
      j javasoft.sqe.jck.lib.AllPermissionSM.testRun(Ljavasoft/sqe/jck/lib/SecurityTestRunner$RT;Ljava/security/Permissions;Ljava/io/PrintWriter;Z)Ljavasoft/sqe/javatest/Status;+5
      j javasoft.sqe.tests.api.java.rmi.Naming.RebindTests.Rebind0001()Ljavasoft/sqe/javatest/Status;+19
      j java.lang.invoke.DirectMethodHandle$Holder.invokeVirtual(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+10 java.base@24-ea
      j java.lang.invoke.LambdaForm$MH+0x00007f54cb005400.invoke(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+31 java.base@24-ea
      j java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+19 java.base@24-ea
      j jdk.internal.reflect.DirectMethodHandleAccessor.invokeImpl(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+41 java.base@24-ea
      j jdk.internal.reflect.DirectMethodHandleAccessor.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+23 java.base@24-ea
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+102 java.base@24-ea
      j javasoft.sqe.javatest.lib.MultiTest.invokeTestCase(Ljava/lang/reflect/Method;)Ljavasoft/sqe/javatest/Status;+8
      j javasoft.sqe.javatest.lib.MultiTest.run([Ljava/lang/String;Ljava/io/PrintWriter;Ljava/io/PrintWriter;)Ljavasoft/sqe/javatest/Status;+139
      j javasoft.sqe.jck.lib.RegistryTest.run([Ljava/lang/String;Ljava/io/PrintWriter;Ljava/io/PrintWriter;)Ljavasoft/sqe/javatest/Status;+10
      j javasoft.sqe.javatest.lib.MultiTest.run([Ljava/lang/String;Ljava/io/PrintStream;Ljava/io/PrintStream;)Ljavasoft/sqe/javatest/Status;+46
      j javasoft.sqe.tests.api.java.rmi.Naming.RebindTests.main([Ljava/lang/String;)V+16
      v ~StubRoutines::call_stub 0x00007f5533d6cd01

      siginfo: si_signo: 11 (SIGSEGV), si_code: 2 (SEGV_ACCERR), si_addr: 0x00007f55480a4000

            Assignee:
            David Holmes
            Reporter:
            Mark Sheppard (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: